==> project-neon/Sloth/Firmware/Sloth-Mbed_LCP1768/lib/QTRSensors/QTRSensors.cpp <==
#include <stdlib.h>
#include "QTRSensors.h"
#include "mbed.h"

void QTRSensors::init(PinName *pins, unsigned char numSensors,
                      PinName emitterPin, bool analog = false)
{
    calibratedMinimumOn=0;
    calibratedMaximumOn=0;
    calibratedMinimumOff=0;
    calibratedMaximumOff=0;

    if (numSensors > QTR_MAX_SENSORS)
        _numSensors = QTR_MAX_SENSORS;
    else
        _numSensors = numSensors;


    if (_pins == 0) {
        _pins = (PinName *)malloc(sizeof(PinName)*_numSensors);
        if (_pins == 0)
            return;
    }

    unsigned char i;
    // Copy parameter values to local storage
    for (i = 0; i < _numSensors; i++) {
        _pins[i] = pins[i];
    }

    // Allocate the arrays
    // Allocate Space for Calibrated Maximum On Values
    calibratedMaximumOn = (unsigned int*)malloc(sizeof(unsigned int)*_numSensors);

    // If the malloc failed, don't continue.
    if(calibratedMaximumOn == 0)
        return;

    // Initialize the max and min calibrated values to values that
    // will cause the first reading to update them.

    for(i=0; i<_numSensors; i++)
        calibratedMaximumOn[i] = 0;

    // Allocate Space for Calibrated Maximum Off Values
    calibratedMaximumOff = (unsigned int*)malloc(sizeof(unsigned int)*_numSensors);

    // If the malloc failed, don't continue.
    if(calibratedMaximumOff == 0)
        return;

    // Initialize the max and min calibrated values to values that
    // will cause the first reading to update them.

    for(i=0; i<_numSensors; i++)
        calibratedMaximumOff[i] = 0;

    // Allocate Space for Calibrated Minimum On Values
    calibratedMinimumOn = (unsigned int*)malloc(sizeof(unsigned int)*_numSensors);

    // If the malloc failed, don't continue.
    if(calibratedMinimumOn == 0)
        return;

    for(i=0; i<_numSensors; i++)
        calibratedMinimumOn[i] = _maxValue;

    // Allocate Space for Calibrated Minimum Off Values
    calibratedMinimumOff = (unsigned int*)malloc(sizeof(unsigned int)*_numSensors);

    // If the malloc failed, don't continue.
    if(calibratedMinimumOff == 0)
        return;

    for(i=0; i<_numSensors; i++)
        calibratedMinimumOff[i] = _maxValue;

    // emitter pin is used for DigitalOut
    // So we create a DigitalOut on that pin
    _emitterPin = emitterPin;
    _emitter = new DigitalOut(emitterPin);

    // If we have an Analog Sensor then we wil used AnalogIn on the pins provided
    // We use a Vector for our collection of pins
    // Here we reserve space for the pins
    _analog = analog;
    if (_analog) {
        _qtrAIPins.reserve(_numSensors);
    } else {
        // Not analog - so we use _qtrPins (which is a Vector on DigitalInOut)
        _qtrPins.reserve(_numSensors);
    }
    // Create the pins and push onto the vectors
    for (i = 0; i < _numSensors; i++) {
        if (_analog) {
            _qtrAIPins.push_back(new AnalogIn(pins[i]));
        } else {
            _qtrPins.push_back(new DigitalInOut(pins[i]));
        }
    }

}

void QTRSensors::emittersOff()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;

    _emitter->write(LOW);
    wait_us(200); // wait 200 microseconds for the emitters to settle
}

void QTRSensors::emittersOn()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;

    _emitter->write(HIGH);
    wait_us(200); // wait 200 microseconds for the emitters to settle
}

void QTRSensorsRC::init(PinName* pins,
                        unsigned char numSensors,
                        unsigned int timeout, PinName emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin, false);

    _maxValue = timeout;
}

void QTRSensorsRC::readPrivate(unsigned int *sensor_values)
{
    unsigned char i;

    if (_pins == 0)
        return;


    for(i = 0; i < _numSensors; i++) {
        sensor_values[i] = _maxValue;
        _qtrPins[i]->output();
        _qtrPins[i]->write(HIGH);   // make sensor line an output and drive high
    }

    wait_us(10);              // charge lines for 10 us

    for(i = 0; i < _numSensors; i++) {
        // important: disable internal pull-up!
        // ??? do we need to change the mode: _qtrPins[i]->mode(OpenDrain);
        //     or just change mode to input
        //     mbed documentation is not clear and I do not have a test sensor
        _qtrPins[i]->write(LOW);
        _qtrPins[i]->input();

    }

    timer.start();
    unsigned long startTime = timer.read_ms();
    while ((timer.read_ms() - startTime) < _maxValue) {
        unsigned int time = timer.read_ms() - startTime;
        for (i = 0; i < _numSensors; i++) {
            if (_qtrPins[i]->read() == LOW && time < sensor_values[i])
                sensor_values[i] = time;
        }
    }

    timer.stop();
}

void QTRSensorsAnalog::init(PinName* pins,
                            unsigned char numSensors,
                            unsigned char numSamplesPerSensor,
                            PinName emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin, true);

    _numSamplesPerSensor = numSamplesPerSensor;
    _maxValue = 1023; // this is the maximum returned by the A/D conversion
}

void QTRSensorsAnalog::readPrivate(unsigned int *sensor_values)
{
    unsigned char i, j;

    if (_pins == 0)
        return;

    // reset the values
    for(i = 0; i < _numSensors; i++)
        sensor_values[i] = 0;

    for (j = 0; j < _numSamplesPerSensor; j++) {
        for (i = 0; i < _numSensors; i++) {
            sensor_values[i] += (unsigned int) _qtrAIPins[i]->read_u16();   // add the conversion result
        }
    }

    // get the rounded average of the readings for each sensor
    for (i = 0; i < _numSensors; i++)
        sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
                           _numSamplesPerSensor;
}
