==> pololu/qtr-sensors-arduino/QTRSensors.cpp <==
#include <stdlib.h>
#include "QTRSensors.h"
#include <Arduino.h>

void QTRSensors::init(unsigned char *pins, unsigned char numSensors,
  unsigned char emitterPin)
{
    calibratedMinimumOn = nullptr;
    calibratedMaximumOn = nullptr;
    calibratedMinimumOff = nullptr;
    calibratedMaximumOff = nullptr;

    _lastValue = 0; // assume initially that the line is left.

    if (numSensors > QTR_MAX_SENSORS)
        _numSensors = QTR_MAX_SENSORS;
    else
        _numSensors = numSensors;

    if (_pins == nullptr)
    {
        _pins = (unsigned char*)malloc(sizeof(unsigned char)*_numSensors);
        if (_pins == nullptr)
            return;
    }

    unsigned char i;
    for (i = 0; i < _numSensors; i++)
    {
        _pins[i] = pins[i];
    }

    _emitterPin = emitterPin;
}

void QTRSensors::emittersOff()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;
    pinMode(_emitterPin, OUTPUT);
    digitalWrite(_emitterPin, LOW);
    delayMicroseconds(200);
}

void QTRSensors::emittersOn()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;
    pinMode(_emitterPin, OUTPUT);
    digitalWrite(_emitterPin, HIGH);
    delayMicroseconds(200);
}

void QTRDimmable::init(unsigned char *pins, unsigned char numSensors,
  unsigned char emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin);
    _evenEmitterPin = QTR_NO_EMITTER_PIN;
}

void QTRDimmable::init(unsigned char *pins, unsigned char numSensors,
  unsigned char oddEmitterPin, unsigned char evenEmitterPin)
{
    QTRSensors::init(pins, numSensors, oddEmitterPin);
    _evenEmitterPin = evenEmitterPin;
}

void QTRDimmable::emittersOff()
{
    if (_evenEmitterPin != QTR_NO_EMITTER_PIN)
    {
        // Stop driving even emitter ctrl pin
        // and let odd pin control all emitters
        pinMode (_evenEmitterPin, INPUT);
    }
    emittersOff(QTR_BANK_ODD);
}

void QTRDimmable::emittersOff(unsigned char bank, bool wait)
{
    unsigned char ePin;

    if (bank == QTR_BANK_ODD)
    {
        ePin = _emitterPin;
    }
    else // bank == QTR_BANK_EVEN
    {
        ePin = _evenEmitterPin;
    }

    if (ePin == QTR_NO_EMITTER_PIN)
        return;

    pinMode(ePin, OUTPUT);
    digitalWrite(ePin, LOW);

    if (wait)
    {
        // Wait for emitters to turn off. (minimum 1 ms; add some margin)
        delayMicroseconds(1200);
    }
}

void QTRDimmable::emittersOn()
{
    if (_evenEmitterPin != QTR_NO_EMITTER_PIN)
    {
        // Stop driving even emitter pin and let odd pin control all emitters.
        pinMode (_evenEmitterPin, INPUT);
    }
    emittersOn(QTR_BANK_ODD);
}

void QTRDimmable::emittersOn(unsigned char bank, bool wait)
{
    unsigned char ePin;

    if (bank == QTR_BANK_ODD)
    {
        ePin = _emitterPin;
    }
    else // bank == QTR_BANK_EVEN
    {
        ePin = _evenEmitterPin;
    }

    if (ePin == QTR_NO_EMITTER_PIN)
        return;

    pinMode(ePin, OUTPUT);
    digitalWrite(ePin, HIGH);
    unsigned int turnOnStart = micros();

    noInterrupts();
    for (unsigned char i = 0; i < _dimmingLevel; i++)
    {
        delayMicroseconds(1);
        digitalWrite(ePin, LOW);
        delayMicroseconds(1);
        digitalWrite(ePin, HIGH);
    }
    interrupts();

    if (wait)
    {
        // Wait for emitters to turn on: make sure it's been at least 300 us
        // since the emitter pin first went high before returning.
        // (minimum 250 us; add some margin)
        while ((unsigned int)(micros() - turnOnStart) < 300)
        {
            delayMicroseconds(10);
        }
    }
}

void QTRSensorsRC::init(unsigned char* pins,
    unsigned char numSensors, unsigned int timeout, unsigned char emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin);

    _maxValue = timeout;
}

void QTRSensorsRC::readPrivate(unsigned int *sensor_values, unsigned char step, unsigned char start)
{
    unsigned char i;

    if (_pins == 0)
        return;

    for(i = start; i < _numSensors; i += step)
    {
        sensor_values[i] = _maxValue;
        pinMode(_pins[i], OUTPUT);      // make sensor line an output (drives low briefly, but doesn't matter)
        digitalWrite(_pins[i], HIGH);   // drive sensor line high
    }

    delayMicroseconds(10);              // charge lines for 10 us

    for(i = start; i < _numSensors; i += step)
    {
        pinMode(_pins[i], INPUT);       // make sensor line an input
        digitalWrite(_pins[i], LOW);    // important: disable internal pull-up!
    }

    unsigned long startTime = micros();
    while (micros() - startTime < _maxValue)
    {
        unsigned int time = micros() - startTime;
        for (i = start; i < _numSensors; i += step)
        {
            if (digitalRead(_pins[i]) == LOW && time < sensor_values[i])
                sensor_values[i] = time;
        }
    }
}

void QTRSensorsAnalog::init(unsigned char* analogPins,
    unsigned char numSensors, unsigned char numSamplesPerSensor,
    unsigned char emitterPin)
{
    QTRSensors::init(analogPins, numSensors, emitterPin);

    _numSamplesPerSensor = numSamplesPerSensor;
    _maxValue = 1023; // this is the maximum returned by the A/D conversion
}

void QTRSensorsAnalog::readPrivate(unsigned int *sensor_values, unsigned char step, unsigned char start)
{
    unsigned char i, j;

    if (_pins == 0)
        return;

    // reset the values
    for(i = start; i < _numSensors; i += step)
        sensor_values[i] = 0;

    for (j = 0; j < _numSamplesPerSensor; j++)
    {
        for (i = start; i < _numSensors; i += step)
        {
            sensor_values[i] += analogRead(_pins[i]);   // add the conversion result
        }
    }

    // get the rounded average of the readings for each sensor
    for (i = start; i < _numSensors; i += step)
        sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
            _numSamplesPerSensor;
}

void QTRDimmableRC::init(unsigned char* pins,
    unsigned char numSensors, unsigned int timeout, unsigned char emitterPin)
{
    QTRDimmable::init(pins, numSensors, emitterPin);

    _maxValue = timeout;
}

void QTRDimmableRC::init(unsigned char* pins,
    unsigned char numSensors, unsigned int timeout,
    unsigned char oddEmitterPin, unsigned char evenEmitterPin)
{
    QTRDimmable::init(pins, numSensors, oddEmitterPin, evenEmitterPin);

    _maxValue = timeout;
}

void QTRDimmableAnalog::init(unsigned char* analogPins,
    unsigned char numSensors, unsigned char numSamplesPerSensor,
    unsigned char emitterPin)
{
    QTRDimmable::init(analogPins, numSensors, emitterPin);

    _numSamplesPerSensor = numSamplesPerSensor;
    _maxValue = 1023; // this is the maximum returned by the A/D conversion
}

void QTRDimmableAnalog::init(unsigned char* analogPins,
    unsigned char numSensors, unsigned char numSamplesPerSensor,
    unsigned char oddEmitterPin, unsigned char evenEmitterPin)
{
    QTRDimmable::init(analogPins, numSensors, oddEmitterPin, evenEmitterPin);

    _numSamplesPerSensor = numSamplesPerSensor;
    _maxValue = 1023; // this is the maximum returned by the A/D conversion
}
